# emc_torch_package

./: .gitignore  .gitmodules  LICENSE  README.md  environment.yml  pyproject.toml
emc_db/: db_class.py
emc_sim/: __init__.py  __main__.py  blocks.py  functions.py  options.py  plotting.py  prep.py  pulse_optimization.py  simulations.py
emc_sim/simulations/: __init__.py  base.py  fid.py  megesse.py  mese.py  sim.py
example/fit/: fit_config.json
example/simulate/: emc_config.json  emc_params.json  pulse_pypulseq_default_gauss.pkl
optimizations/pulse_optim/: __init__.py  __main__.py  options.py
optimizations/pulse_train_optim/: __main__.py  optimizer.py
pulse_optim/: __init__.py  __main__.py  losses.py  options.py  plotting.py
pulse_train_optim/: __main__.py  optimizer.py
pypulseq_interface/: .gitignore
pypulseq_interface/pypsi/: __init__.py  config.py
pypulseq_interface/pypsi/parameters/: __init__.py  rf_params.py
src/: et_opti.py  fit.py  simulate.py
src/emc_torch/: __init__.py  blocks.py  db_class.py  functions.py  options.py  plotting.py  simulate.py
src/emc_torch/fit/: __init__.py  io.py  options.py
src/emc_torch/fitting/: __init__.py  fit_fn.py  noise.py  options.py  plotting.py
src/emc_torch/simulations/: __init__.py  base.py  fid.py  megesse.py  mese.py  pulse.py
src/pypulseq_interface/: LICENSE
src/pypulseq_interface/pypsi/: config.py
src/pypulseq_interface/pypsi/parameters/: emc_params.py  rf_params.py
submodules/pypulseq_interface/pypsi/parameters/: emc_params.py  pypulseq_params.py  recon_params.py  rf_params.py  (+2 more)
