[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "emc_torch"
version = "2024.0.1"
requires-python = ">=3.8"
authors = [
  { name="Jochen Schmidt", email="jschmidt@cbs.mpg.de" },
  { name="Patrick Scheibe", email="pscheibe@cbs.mpg.de" },
]
description = "EMC package for Bloch Equation Sequence Simulation written with PyTorch"
readme = "README.rst"
license = {file = "LICENSE.txt"}
keywords = ["EMC", "MRI", "dictionary reconstruction", "Bloch Equation Simulation"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/schmidt-jo/emc_torch"
Repository = "https://github.com/schmidt-jo/emc_torch"
